ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app
  labels:
    app.kubernetes.io/name: k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-app
    spec:
      containers:
        - name: k8s-app
          image: k8s-app:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
