ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app
  labels:
    app.kubernetes.io/name: k8s-app
spec:
  selector:
    app.kubernetes.io/name: k8s-app
  ports:
    - protocol: TCP
      port: 8080
